# TTS-Phoenix

./: .gitignore  README.md  main.py  main.spec  pyproject.toml  voices-list.txt
