[project]
name = "tts-phoenix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro-onnx>=0.4.5",
    "onnxruntime-gpu>=1.21.0",
    "pyinstaller>=6.12.0",
    "pyqt6>=6.8.1",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]
